[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "numpy",
    "PyYAML",
    "pybind11",
    "pip",
    "cmake",
    "ninja"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(filename)s:%(funcName)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.cibuildwheel]
build = "cp310-* cp311-*"
build-verbosity = "3"
[tool.cibuildwheel.linux]
archs = ["aarch64"]
repair-wheel-command = "auditwheel repair --plat manylinux_2_35_aarch64 -w {dest_dir} {wheel}"
[tool.cibuildwheel.macos]
archs = ["arm64"]
environment = { LIB_ARCH = "arm64" }