[build-system]
requires = [
    "PyYAML",
    "cibuildwheel",
    "cmake",
    "ninja",
    "numpy",
    "pip",
    "pybind11",
    "setuptools>=42",
    "wheel",
    #    "mlir==17.0.0+6c7fd723",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "[%(filename)s:%(funcName)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.cibuildwheel]
build-verbosity = "3"
environment = { PIP_EXTRA_INDEX_URL = "https://github.com/makslevental/cibuildwheel-llvm-mlir/releases/expanded_assets/latest", PIP_NO_BUILD_ISOLATION = "false" }
build = "cp311-*"
skip = ["*-manylinux_i686", "*-musllinux*"]

[tool.cibuildwheel.linux]
before-build = [
    "yum install -y wget",
    "wget -q https://developer.download.nvidia.com/compute/cuda/11.7.1/local_installers/cuda_11.7.1_515.65.01_linux.run",
    "sh cuda_11.7.1_515.65.01_linux.run --toolkit --silent --override",
    "mkdir -p /usr/lib/x86_64-linux-gnu",
    "ln -s /usr/lib64/libcuda.so /usr/lib/x86_64-linux-gnu/libcuda.so",
    "pip install -r {project}/build-requirements.txt",
]
archs = ["x86_64"]
manylinux-aarch64-image = "dockcross/manylinux2014-aarch64"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel} --exclude libcuda.so.1 --exclude libomp.so"

[tool.cibuildwheel.macos]
archs = ["arm64"]
#environment = { PIP_PLATFORM = "macosx_11_0_arm64", PIP_ONLY_BINARY = ":all:" }
before-build = [
    "wget -q https://sdk.lunarg.com/sdk/download/1.3.239.0/mac/vulkansdk-macos-1.3.239.0.dmg",
    "sudo hdiutil attach vulkansdk-macos-1.3.239.0.dmg",
    "sudo /Volumes/vulkansdk-macos-1.3.239.0/InstallVulkan.app/Contents/MacOS/InstallVulkan --accept-licenses --default-answer --confirm-command install com.lunarg.vulkan.core com.lunarg.vulkan.usr com.lunarg.vulkan.sdl2 com.lunarg.vulkan.glm com.lunarg.vulkan.volk com.lunarg.vulkan.vma",
    "pip install -r {project}/build-requirements.txt",
    "pip uninstall -y mlir",
    "pip install --platform=macosx_11_0_arm64 --only-binary=:all: mlir==17.0.0+6c7fd723 --target $(python -c 'import site; print(site.getsitepackages()[0])') -U -v",
    "sed -i.bak 's/split_config_settings(build_options.config_settings, build_frontend)/[\"--platform=macosx_11_0_arm64\", \"--only-binary=:all:\"]/g' $(python -c 'import cibuildwheel; print(cibuildwheel.__path__[0])')/macos.py"
]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-build = [
    "pip install -r {project}/build-requirements.txt",
]
